# it-ops-intelligence-platform

./: .env.example  .gitignore  Dockerfile  PLAN_IT_Ops_Intelligence.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: README.md
data/processed/: dashboard_data.parquet  model_metrics.json
docs/decisions/: 002_autoencoder_for_anomaly.md  003_lightgbm_over_xgboost.md  004_llm_provider.md
docs/superpowers/plans/: 2026-06-15-anomaly-detection.md  2026-06-15-api-dashboard.md  2026-06-15-escalation-predictor.md  2026-06-15-llm-narratives.md
docs/superpowers/specs/: 2026-06-15-anomaly-detection-design.md  2026-06-15-api-dashboard-design.md  2026-06-15-escalation-predictor-design.md  2026-06-15-llm-narratives-design.md
notebooks/: 01_eda.ipynb  02_anomaly_detection.ipynb  03_escalation_model.ipynb  04_llm_explanations.ipynb
scripts/: generate_data.py  train_all.py
src/itops/: __init__.py  config.py
src/itops/api/: __init__.py  main.py  routes.py  schemas.py
src/itops/dashboard/: __init__.py  streamlit_app.py
src/itops/data/: __init__.py  features.py  loader.py  synthesizer.py
src/itops/llm/: __init__.py  narrative.py  prompts.py
src/itops/models/: __init__.py  anomaly.py  escalation.py  explainer.py
src/itops/utils/: __init__.py  logging.py  mlflow_utils.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_anomaly.py  test_escalation.py  test_narrative.py  test_serialization.py  test_synthesizer.py
