[project]
name = "itops"
version = "0.1.0"
description = "IT Operations Intelligence Platform — anomaly detection, escalation risk scoring y explicaciones LLM sobre datos ITSM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "faker>=25.0",
    "pyarrow>=16.0",
    "scikit-learn>=1.5",
    "torch>=2.3",
    "nbformat>=5.9",
    "lightgbm>=4.3",
    "shap>=0.45",
    "anthropic>=0.30",
    "transformers>=4.40",
    "pydantic>=2.5",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "streamlit>=1.35",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/itops"]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Notebooks: el `;` para suprimir output de plots es idiomático.
"*.ipynb" = ["E702", "E703"]

[tool.mypy]
python_version = "3.11"
packages = ["itops"]
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["itops"]
branch = true
